parser.output
   0  $accept : %entry% $end

   1  program : block DOT

   2  block : decl_list BEGIN stmts END

   3  decl_list :
   4            | decl decl_list

   5  decl : CONST const_decls
   6       | VAR var_decls
   7       | proc_decl
   8       | TYPE type_decls

   9  const_decls : const_decl
  10              | const_decl const_decls

  11  const_decl : IDENT EQUAL expr SEMI

  12  type_decls : type_decl
  13             | type_decl type_decls

  14  type_decl : IDENT EQUAL typexpr SEMI

  15  var_decls : var_decl
  16            | var_decl var_decls

  17  var_decl : ident_list COLON typexpr SEMI

  18  proc_decl : proc_heading SEMI block SEMI

  19  proc_heading : PROC name params return_type

  20  params : LPAR RPAR
  21         | LPAR formal_decls RPAR

  22  formal_decls : formal_decl
  23               | formal_decl SEMI formal_decls

  24  formal_decl : ident_list COLON formal_typexpr
  25              | VAR ident_list COLON formal_typexpr
  26              | proc_heading

  27  return_type :
  28              | COLON typexpr

  29  stmts : stmt_list

  30  stmt_list : stmt
  31            | stmt SEMI stmt_list

  32  stmt : line stmt1
  33       | IMPOSSIBLE

  34  line :

  35  stmt1 :
  36        | variable ASSIGN expr
  37        | name actuals
  38        | RETURN expr_opt
  39        | IF expr THEN stmts elses END
  40        | WHILE expr DO stmts END
  41        | REPEAT stmts UNTIL expr
  42        | FOR name ASSIGN expr TO expr DO stmts END
  43        | CASE expr OF arms else_part END

  44  elses :
  45        | ELSE stmts
  46        | ELSIF line expr THEN stmts elses

  47  arms : arm
  48       | arm VBAR arms

  49  arm : expr COLON stmts

  50  else_part :
  51            | ELSE stmts

  52  ident_list : IDENT
  53             | IDENT COMMA ident_list

  54  expr_opt :
  55           | expr

  56  expr : simple
  57       | expr RELOP simple
  58       | expr EQUAL simple

  59  simple : term
  60         | simple ADDOP term
  61         | simple MINUS term

  62  term : factor
  63       | term MULOP factor

  64  factor : variable
  65         | NUMBER
  66         | STRING
  67         | CHAR
  68         | NIL
  69         | name actuals
  70         | NOT factor
  71         | MINUS factor
  72         | LPAR expr RPAR
  73         | LEN expr

  74  actuals : LPAR RPAR
  75          | LPAR expr_list RPAR

  76  expr_list : expr
  77            | expr COMMA expr_list

  78  variable : name
  79           | variable SUB expr BUS
  80           | variable SUB expr DOT DOT expr RPAR
  81           | variable DOT name
  82           | variable ARROW

  83  formal_typexpr : name
  84                 | ARRAY expr OF typexpr
  85                 | ARRAY OF typexpr
  86                 | RECORD fields END
  87                 | POINTER TO pointer_typexpr

  88  pointer_typexpr : name
  89                  | ARRAY expr OF typexpr
  90                  | ARRAY OF typexpr
  91                  | RECORD fields END
  92                  | POINTER TO pointer_typexpr

  93  typexpr : name
  94          | ARRAY expr OF typexpr
  95          | RECORD fields END
  96          | POINTER TO pointer_typexpr

  97  fields : field_decl opt_semi
  98         | field_decl SEMI fields

  99  field_decl : ident_list COLON typexpr

 100  opt_semi : SEMI
 101           |

 102  name : IDENT

 103  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (103)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	program  goto 7
	block  goto 8
	decl_list  goto 9
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	decl : CONST . const_decls  (5)

	IDENT  shift 13
	.  error

	const_decls  goto 14
	const_decl  goto 15


state 4
	proc_heading : PROC . name params return_type  (19)

	IDENT  shift 16
	.  error

	name  goto 17


state 5
	decl : TYPE . type_decls  (8)

	IDENT  shift 18
	.  error

	type_decls  goto 19
	type_decl  goto 20


state 6
	decl : VAR . var_decls  (6)

	IDENT  shift 21
	.  error

	var_decls  goto 22
	var_decl  goto 23
	ident_list  goto 24


state 7
	%entry% : '\001' program .  (103)

	.  reduce 103


state 8
	program : block . DOT  (1)

	DOT  shift 25
	.  error


state 9
	block : decl_list . BEGIN stmts END  (2)

	BEGIN  shift 26
	.  error


state 10
	decl_list : decl . decl_list  (4)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	decl_list  goto 27
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 11
	decl : proc_decl .  (7)

	.  reduce 7


state 12
	proc_decl : proc_heading . SEMI block SEMI  (18)

	SEMI  shift 28
	.  error


state 13
	const_decl : IDENT . EQUAL expr SEMI  (11)

	EQUAL  shift 29
	.  error


state 14
	decl : CONST const_decls .  (5)

	.  reduce 5


state 15
	const_decls : const_decl .  (9)
	const_decls : const_decl . const_decls  (10)

	IDENT  shift 13
	BEGIN  reduce 9
	CONST  reduce 9
	PROC  reduce 9
	TYPE  reduce 9
	VAR  reduce 9

	const_decls  goto 30
	const_decl  goto 15


state 16
	name : IDENT .  (102)

	.  reduce 102


state 17
	proc_heading : PROC name . params return_type  (19)

	LPAR  shift 31
	.  error

	params  goto 32


state 18
	type_decl : IDENT . EQUAL typexpr SEMI  (14)

	EQUAL  shift 33
	.  error


state 19
	decl : TYPE type_decls .  (8)

	.  reduce 8


state 20
	type_decls : type_decl .  (12)
	type_decls : type_decl . type_decls  (13)

	IDENT  shift 18
	BEGIN  reduce 12
	CONST  reduce 12
	PROC  reduce 12
	TYPE  reduce 12
	VAR  reduce 12

	type_decls  goto 34
	type_decl  goto 20


state 21
	ident_list : IDENT .  (52)
	ident_list : IDENT . COMMA ident_list  (53)

	COMMA  shift 35
	COLON  reduce 52


state 22
	decl : VAR var_decls .  (6)

	.  reduce 6


state 23
	var_decls : var_decl .  (15)
	var_decls : var_decl . var_decls  (16)

	IDENT  shift 21
	BEGIN  reduce 15
	CONST  reduce 15
	PROC  reduce 15
	TYPE  reduce 15
	VAR  reduce 15

	var_decls  goto 36
	var_decl  goto 23
	ident_list  goto 24


state 24
	var_decl : ident_list . COLON typexpr SEMI  (17)

	COLON  shift 37
	.  error


state 25
	program : block DOT .  (1)

	.  reduce 1


state 26
	block : decl_list BEGIN . stmts END  (2)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	END  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	FOR  reduce 34
	CASE  reduce 34

	stmts  goto 39
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 27
	decl_list : decl decl_list .  (4)

	.  reduce 4


state 28
	proc_decl : proc_heading SEMI . block SEMI  (18)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	block  goto 43
	decl_list  goto 9
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 29
	const_decl : IDENT EQUAL . expr SEMI  (11)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 52
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57


state 30
	const_decls : const_decl const_decls .  (10)

	.  reduce 10


state 31
	params : LPAR . RPAR  (20)
	params : LPAR . formal_decls RPAR  (21)

	IDENT  shift 21
	RPAR  shift 58
	PROC  shift 4
	VAR  shift 59
	.  error

	ident_list  goto 60
	proc_heading  goto 61
	formal_decls  goto 62
	formal_decl  goto 63


state 32
	proc_heading : PROC name params . return_type  (19)
	return_type : .  (27)

	COLON  shift 64
	SEMI  reduce 27
	RPAR  reduce 27

	return_type  goto 65


state 33
	type_decl : IDENT EQUAL . typexpr SEMI  (14)

	IDENT  shift 16
	ARRAY  shift 66
	RECORD  shift 67
	POINTER  shift 68
	.  error

	typexpr  goto 69
	name  goto 70


state 34
	type_decls : type_decl type_decls .  (13)

	.  reduce 13


state 35
	ident_list : IDENT COMMA . ident_list  (53)

	IDENT  shift 21
	.  error

	ident_list  goto 71


state 36
	var_decls : var_decl var_decls .  (16)

	.  reduce 16


state 37
	var_decl : ident_list COLON . typexpr SEMI  (17)

	IDENT  shift 16
	ARRAY  shift 66
	RECORD  shift 67
	POINTER  shift 68
	.  error

	typexpr  goto 72
	name  goto 70


state 38
	stmt : IMPOSSIBLE .  (33)

	.  reduce 33


state 39
	block : decl_list BEGIN stmts . END  (2)

	END  shift 73
	.  error


state 40
	stmts : stmt_list .  (29)

	.  reduce 29


state 41
	stmt_list : stmt .  (30)
	stmt_list : stmt . SEMI stmt_list  (31)

	SEMI  shift 74
	VBAR  reduce 30
	ELSE  reduce 30
	END  reduce 30
	UNTIL  reduce 30
	ELSIF  reduce 30


state 42
	stmt : line . stmt1  (32)
	stmt1 : .  (35)

	IDENT  shift 16
	IF  shift 75
	RETURN  shift 76
	WHILE  shift 77
	REPEAT  shift 78
	FOR  shift 79
	CASE  shift 80
	SEMI  reduce 35
	VBAR  reduce 35
	ELSE  reduce 35
	END  reduce 35
	UNTIL  reduce 35
	ELSIF  reduce 35

	name  goto 81
	stmt1  goto 82
	variable  goto 83


state 43
	proc_decl : proc_heading SEMI block . SEMI  (18)

	SEMI  shift 84
	.  error


state 44
	factor : NUMBER .  (65)

	.  reduce 65


state 45
	factor : CHAR .  (67)

	.  reduce 67


state 46
	factor : STRING .  (66)

	.  reduce 66


state 47
	factor : LPAR . expr RPAR  (72)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 85
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57


state 48
	factor : MINUS . factor  (71)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	name  goto 53
	variable  goto 54
	factor  goto 86


state 49
	factor : LEN . expr  (73)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 87
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57


state 50
	factor : NOT . factor  (70)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	name  goto 53
	variable  goto 54
	factor  goto 88


state 51
	factor : NIL .  (68)

	.  reduce 68


state 52
	const_decl : IDENT EQUAL expr . SEMI  (11)
	expr : expr . RELOP simple  (57)
	expr : expr . EQUAL simple  (58)

	RELOP  shift 89
	SEMI  shift 90
	EQUAL  shift 91
	.  error


state 53
	factor : name . actuals  (69)
	variable : name .  (78)

	LPAR  shift 92
	MULOP  reduce 78
	ADDOP  reduce 78
	RELOP  reduce 78
	SEMI  reduce 78
	DOT  reduce 78
	COLON  reduce 78
	RPAR  reduce 78
	COMMA  reduce 78
	SUB  reduce 78
	BUS  reduce 78
	EQUAL  reduce 78
	MINUS  reduce 78
	VBAR  reduce 78
	ARROW  reduce 78
	DO  reduce 78
	ELSE  reduce 78
	END  reduce 78
	OF  reduce 78
	THEN  reduce 78
	TO  reduce 78
	UNTIL  reduce 78
	ELSIF  reduce 78

	actuals  goto 93


54: shift/reduce conflict (shift 94, reduce 64) on DOT
state 54
	factor : variable .  (64)
	variable : variable . SUB expr BUS  (79)
	variable : variable . SUB expr DOT DOT expr RPAR  (80)
	variable : variable . DOT name  (81)
	variable : variable . ARROW  (82)

	DOT  shift 94
	SUB  shift 95
	ARROW  shift 96
	MULOP  reduce 64
	ADDOP  reduce 64
	RELOP  reduce 64
	SEMI  reduce 64
	COLON  reduce 64
	RPAR  reduce 64
	COMMA  reduce 64
	BUS  reduce 64
	EQUAL  reduce 64
	MINUS  reduce 64
	VBAR  reduce 64
	DO  reduce 64
	ELSE  reduce 64
	END  reduce 64
	OF  reduce 64
	THEN  reduce 64
	TO  reduce 64
	UNTIL  reduce 64
	ELSIF  reduce 64


55: shift/reduce conflict (shift 97, reduce 56) on ADDOP
55: shift/reduce conflict (shift 98, reduce 56) on MINUS
state 55
	expr : simple .  (56)
	simple : simple . ADDOP term  (60)
	simple : simple . MINUS term  (61)

	ADDOP  shift 97
	MINUS  shift 98
	MULOP  reduce 56
	RELOP  reduce 56
	SEMI  reduce 56
	DOT  reduce 56
	COLON  reduce 56
	RPAR  reduce 56
	COMMA  reduce 56
	BUS  reduce 56
	EQUAL  reduce 56
	VBAR  reduce 56
	DO  reduce 56
	ELSE  reduce 56
	END  reduce 56
	OF  reduce 56
	THEN  reduce 56
	TO  reduce 56
	UNTIL  reduce 56
	ELSIF  reduce 56


56: shift/reduce conflict (shift 99, reduce 59) on MULOP
state 56
	simple : term .  (59)
	term : term . MULOP factor  (63)

	MULOP  shift 99
	ADDOP  reduce 59
	RELOP  reduce 59
	SEMI  reduce 59
	DOT  reduce 59
	COLON  reduce 59
	RPAR  reduce 59
	COMMA  reduce 59
	BUS  reduce 59
	EQUAL  reduce 59
	MINUS  reduce 59
	VBAR  reduce 59
	DO  reduce 59
	ELSE  reduce 59
	END  reduce 59
	OF  reduce 59
	THEN  reduce 59
	TO  reduce 59
	UNTIL  reduce 59
	ELSIF  reduce 59


state 57
	term : factor .  (62)

	.  reduce 62


state 58
	params : LPAR RPAR .  (20)

	.  reduce 20


state 59
	formal_decl : VAR . ident_list COLON formal_typexpr  (25)

	IDENT  shift 21
	.  error

	ident_list  goto 100


state 60
	formal_decl : ident_list . COLON formal_typexpr  (24)

	COLON  shift 101
	.  error


state 61
	formal_decl : proc_heading .  (26)

	.  reduce 26


state 62
	params : LPAR formal_decls . RPAR  (21)

	RPAR  shift 102
	.  error


state 63
	formal_decls : formal_decl .  (22)
	formal_decls : formal_decl . SEMI formal_decls  (23)

	SEMI  shift 103
	RPAR  reduce 22


state 64
	return_type : COLON . typexpr  (28)

	IDENT  shift 16
	ARRAY  shift 66
	RECORD  shift 67
	POINTER  shift 68
	.  error

	typexpr  goto 104
	name  goto 70


state 65
	proc_heading : PROC name params return_type .  (19)

	.  reduce 19


state 66
	typexpr : ARRAY . expr OF typexpr  (94)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 105
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57


state 67
	typexpr : RECORD . fields END  (95)

	IDENT  shift 21
	.  error

	ident_list  goto 106
	fields  goto 107
	field_decl  goto 108


state 68
	typexpr : POINTER . TO pointer_typexpr  (96)

	TO  shift 109
	.  error


state 69
	type_decl : IDENT EQUAL typexpr . SEMI  (14)

	SEMI  shift 110
	.  error


state 70
	typexpr : name .  (93)

	.  reduce 93


state 71
	ident_list : IDENT COMMA ident_list .  (53)

	.  reduce 53


state 72
	var_decl : ident_list COLON typexpr . SEMI  (17)

	SEMI  shift 111
	.  error


state 73
	block : decl_list BEGIN stmts END .  (2)

	.  reduce 2


state 74
	stmt_list : stmt SEMI . stmt_list  (31)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	VBAR  reduce 34
	ELSE  reduce 34
	END  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	UNTIL  reduce 34
	FOR  reduce 34
	ELSIF  reduce 34
	CASE  reduce 34

	stmt_list  goto 112
	stmt  goto 41
	line  goto 42


state 75
	stmt1 : IF . expr THEN stmts elses END  (39)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 113
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57


state 76
	stmt1 : RETURN . expr_opt  (38)
	expr_opt : .  (54)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	SEMI  reduce 54
	VBAR  reduce 54
	ELSE  reduce 54
	END  reduce 54
	UNTIL  reduce 54
	ELSIF  reduce 54

	expr  goto 114
	name  goto 53
	variable  goto 54
	expr_opt  goto 115
	simple  goto 55
	term  goto 56
	factor  goto 57


state 77
	stmt1 : WHILE . expr DO stmts END  (40)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 116
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57


state 78
	stmt1 : REPEAT . stmts UNTIL expr  (41)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	UNTIL  reduce 34
	FOR  reduce 34
	CASE  reduce 34

	stmts  goto 117
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 79
	stmt1 : FOR . name ASSIGN expr TO expr DO stmts END  (42)

	IDENT  shift 16
	.  error

	name  goto 118


state 80
	stmt1 : CASE . expr OF arms else_part END  (43)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 119
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57


state 81
	stmt1 : name . actuals  (37)
	variable : name .  (78)

	LPAR  shift 92
	DOT  reduce 78
	SUB  reduce 78
	ASSIGN  reduce 78
	ARROW  reduce 78

	actuals  goto 120


state 82
	stmt : line stmt1 .  (32)

	.  reduce 32


state 83
	stmt1 : variable . ASSIGN expr  (36)
	variable : variable . SUB expr BUS  (79)
	variable : variable . SUB expr DOT DOT expr RPAR  (80)
	variable : variable . DOT name  (81)
	variable : variable . ARROW  (82)

	DOT  shift 94
	SUB  shift 95
	ASSIGN  shift 121
	ARROW  shift 96
	.  error


state 84
	proc_decl : proc_heading SEMI block SEMI .  (18)

	.  reduce 18


state 85
	expr : expr . RELOP simple  (57)
	expr : expr . EQUAL simple  (58)
	factor : LPAR expr . RPAR  (72)

	RELOP  shift 89
	RPAR  shift 122
	EQUAL  shift 91
	.  error


state 86
	factor : MINUS factor .  (71)

	.  reduce 71


87: shift/reduce conflict (shift 89, reduce 73) on RELOP
87: shift/reduce conflict (shift 91, reduce 73) on EQUAL
state 87
	expr : expr . RELOP simple  (57)
	expr : expr . EQUAL simple  (58)
	factor : LEN expr .  (73)

	RELOP  shift 89
	EQUAL  shift 91
	MULOP  reduce 73
	ADDOP  reduce 73
	SEMI  reduce 73
	DOT  reduce 73
	COLON  reduce 73
	RPAR  reduce 73
	COMMA  reduce 73
	BUS  reduce 73
	MINUS  reduce 73
	VBAR  reduce 73
	DO  reduce 73
	ELSE  reduce 73
	END  reduce 73
	OF  reduce 73
	THEN  reduce 73
	TO  reduce 73
	UNTIL  reduce 73
	ELSIF  reduce 73


state 88
	factor : NOT factor .  (70)

	.  reduce 70


state 89
	expr : expr RELOP . simple  (57)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	name  goto 53
	variable  goto 54
	simple  goto 123
	term  goto 56
	factor  goto 57


state 90
	const_decl : IDENT EQUAL expr SEMI .  (11)

	.  reduce 11


state 91
	expr : expr EQUAL . simple  (58)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	name  goto 53
	variable  goto 54
	simple  goto 124
	term  goto 56
	factor  goto 57


state 92
	actuals : LPAR . RPAR  (74)
	actuals : LPAR . expr_list RPAR  (75)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	RPAR  shift 125
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 126
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57
	expr_list  goto 127


state 93
	factor : name actuals .  (69)

	.  reduce 69


state 94
	variable : variable DOT . name  (81)

	IDENT  shift 16
	.  error

	name  goto 128


state 95
	variable : variable SUB . expr BUS  (79)
	variable : variable SUB . expr DOT DOT expr RPAR  (80)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	expr  goto 129
	name  goto 53
	variable  goto 54
	simple  goto 55
	term  goto 56
	factor  goto 57


state 96
	variable : variable ARROW .  (82)

	.  reduce 82


state 97
	simple : simple ADDOP . term  (60)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	name  goto 53
	variable  goto 54
	term  goto 130
	factor  goto 57


state 98
	simple : simple MINUS . term  (61)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	name  goto 53
	variable  goto 54
	term  goto 131
	factor  goto 57


state 99
	term : term MULOP . factor  (63)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	LEN  shift 49
	NOT  shift 50
	NIL  shift 51
	.  error

	name  goto 53
	variable  goto 54
	factor  goto 132


state 100
	formal_decl : VAR ident_list . COLON formal_typexpr  (25)

	COLON  shift 133
	.  error


state 101
	formal_decl : ident_list COLON . formal_typexpr  (24)

	IDENT  shift 16
	ARRAY  shift 134
	RECORD  shift 135
	POINTER  shift 136
	.  error

	name  goto 137
	formal_typexpr  goto 138


state 102
	params : LPAR formal_decls RPAR .  (21)

	.  reduce 21

